...
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragment.ChatProfileFragment">


...
                            android:textColor="@color/black"
                            android:gravity="start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtGender"
                            tools:text="UAE Team Head"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:gravity="start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
...
