<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FragmentRandomUserList">

    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/row_user"
        android:id="@+id/recycler_view_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:visibility="gone"
        android:progressDrawable="@drawable/myprogressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</FrameLayout>
</layout>